--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "startServer": "node ./backend/app.js"
+    "startServer": "node app.js"
   }
 }
